// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownLink render successfully for languages 1`] = `
<div
  class="dropdown-wrapper"
>
  <a
    class="dropdown-title"
  >
    <span
      class="title"
    >
      Languages
    </span>
     
    <span
      class="arrow right"
    />
  </a>
   
  <dropdowntransition-stub>
    <ul
      class="nav-dropdown"
      style="display: none;"
    >
      <li
        class="dropdown-item"
      >
        <!---->
         
        <navlink-stub
          item="[object Object]"
        />
      </li>
      <li
        class="dropdown-item"
      >
        <!---->
         
        <navlink-stub
          item="[object Object]"
        />
      </li>
      <li
        class="dropdown-item"
      >
        <!---->
         
        <navlink-stub
          item="[object Object]"
        />
      </li>
       
      <li
        class="languages-dropdown-item"
      >
        <router-link-stub
          class="languages-link nav-link"
          to="/languages/"
        >
          View all
        </router-link-stub>
      </li>
    </ul>
  </dropdowntransition-stub>
</div>
`;

exports[`DropdownLink render successfully for non-languages 1`] = `
<div
  class="dropdown-wrapper"
>
  <a
    class="dropdown-title"
  >
    <span
      class="title"
    >
      choices
    </span>
     
    <span
      class="arrow right"
    />
  </a>
   
  <dropdowntransition-stub>
    <ul
      class="nav-dropdown"
      style="display: none;"
    >
      <li
        class="dropdown-item"
      >
        <h4>
          currency
        </h4>
         
        <ul
          class="dropdown-subitem-wrapper"
        >
          <li
            class="dropdown-subitem"
          >
            <navlink-stub
              item="[object Object]"
            />
          </li>
          <li
            class="dropdown-subitem"
          >
            <navlink-stub
              item="[object Object]"
            />
          </li>
        </ul>
      </li>
      <li
        class="dropdown-item"
      >
        <!---->
         
        <navlink-stub
          item="[object Object]"
        />
      </li>
      <li
        class="dropdown-item"
      >
        <h4>
          color
        </h4>
         
        <ul
          class="dropdown-subitem-wrapper"
        >
          <li
            class="dropdown-subitem"
          >
            <navlink-stub
              item="[object Object]"
            />
          </li>
          <li
            class="dropdown-subitem"
          >
            <navlink-stub
              item="[object Object]"
            />
          </li>
          <li
            class="dropdown-subitem"
          >
            <navlink-stub
              item="[object Object]"
            />
          </li>
        </ul>
      </li>
       
      <!---->
    </ul>
  </dropdowntransition-stub>
</div>
`;
